--- a/apfel.html
+++ b/apfel.html
@@ -14,59 +14,15 @@
 </header>
 
 <main>
-     <!-- Videos -->
   <section class="card">
     <h2>🎥 Dokumentation</h2>
     <div class="videos">
       <video controls>
-        <source src="videos/streuobstwiese_einfach.mp4" type="video/mp4">
+        <source src="https://youtube.com/channel/@Jo-star-DV" type="video/mp4">
       </video>
-    </div>
-  </section>
-
-  <!-- Dokumentation direkt unter Header -->
-  <section class="card">
-    <h2>📖 Dokumentation</h2>
-    <p><strong>Einfach erklärt für Schülerinnen und Schüler:</strong></p>
-    <p>
-      Eine Streuobstwiese ist eine Wiese mit vielen hochstämmigen Obstbäumen
-      wie Apfel-, Birnen- oder Kirschbäumen. Zwischen den Bäumen wachsen Blumen
-      und Gräser.
-    </p>
-    <p>
-      Sie ist wichtig für die Umwelt, weil sie vielen Tieren ein Zuhause bietet
-      und gesundes, regionales Obst liefert.
-    </p>
-  </section>
-
-  <!-- Bildergalerie -->
-  <section class="card">
-    <h2>🌳 Bildergalerie – Behind the Scenes</h2>
-    <div class="gallery">
-      <img src="images/streuobstwiese1.jpg" alt="Streuobstwiese">
-      <img src="images/streuobstwiese2.jpg" alt="Obstbäume">
-      <img src="images/streuobstwiese3.jpg" alt="Blumen und Bienen">
-    </div>
-  </section>
-
-  <!-- Quiz -->
-  <section class="card">
-    <h2>🧠 Quiz</h2>
-    <form id="quiz">
-
-      <p>1. Was ist eine Streuobstwiese?</p>
-      <label><input type="radio" name="q1" value="a"> Obstplantage</label>
-      <label><input type="radio" name="q1" value="b"> Wiese mit Obstbäumen</label>
-
-      <p>2. Welche Frucht wächst dort?</p>
-      <label><input type="radio" name="q2" value="a"> Banane</label>
-      <label><input type="radio" name="q2" value="b"> Apfel</label>
-
-      <p>3. Wie wird sie meist gepflegt?</p>
-      <label><input type="radio" name="q3" value="a"> Sehr intensiv</label>
-      <label><input type="radio" name="q3" value="b"> Naturfreundlich</label>
-
-      <p>4. Was wird gefördert?</p>
+    </div> </section><section class="card">
+    <h2>📖 Doku</h2>
+</section><section class="card"> <h2>Quiz</h2><form id="quiz"><p>1. Was ist eine Streuobstwiese?</p><label><input type="radio" name="q1" value="a"> Obstplantage</label><label><input type="radio" name="q1" value="b"> Wiese mit Obstbäumen</label><p>2. Welche Frucht wächst dort meist?</p> <label><input type="radio" name="q2" value="a"> Banane</label> <label><input type="radio" name="q2" value="b"> Apfel</label><p>3. Wie wird sie typischerweise gepflegt?</p><label><input type="radio" name="q3" value="a"> Sehr intensiv</label> <label><input type="radio" name="q3" value="b"> Naturfreundlich</label>      <p>4. Was wird dadurch gefördert?</p>
       <label><input type="radio" name="q4" value="a"> Artenvielfalt</label>
       <label><input type="radio" name="q4" value="b"> Straßenbau</label>
 
