Changed src to youtube

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <section class="card">
       <h2>Doku: Streuobst - der bessere Apfel?</h2>
       <div class="wrapper">
-        <video controls playsinline>
-          <source src="streuobst.mp4" type="video/mp4">
-        </video>
+        <iframe src="https://youtube.com/watch?v=2UvmUzCODIY">
       </div>
     </section>
   </main>
