--- a/quiz.html
+++ b/quiz.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="wrapper">
-      <video id="video" controls playsinline></video>
+      <iframe id="video"></video>
     </div>
 
     <div id="quiz"></div>
