--- a/quiz.html
+++ b/quiz.html
@@ -30,8 +30,10 @@
     </div>
 
     <div class="wrapper">
-      <iframe id="video"></video>
+      <iframe id="video" width="560" height="315" frameborder="0" allowfullscreen></iframe>
     </div>
+
+    <button id="nextBtn">Quiz</button>
 
     <div id="quiz"></div>
     <p id="feedback"></p>
@@ -40,6 +42,5 @@
 </main>
 
 <script src="apfel.js"></script>
-
 </body>
 </html>
