--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
     <section class="card">
       <h2>Doku: Streuobst - der bessere Apfel?</h2>
       <div class="wrapper">
-        <iframe src="https://youtube.com/watch?v=2UvmUzCODIY">
+        <iframe src="https://www.youtube.com/embed/AIjtNbYUo4I">
       </div>
     </section>
   </main>
-
-  <script src="apfel.js"></script>
 
 </body>
 </html>
