--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <main>
     <section class="card">
-      <h2>Doku: Streuobst - der bessere Apfel?</h2>
+      <h2>Dokumentation: Streuobst - der bessere Apfel?</h2>
       <div class="wrapper">
         <iframe src="https://www.youtube.com/embed/AIjtNbYUo4I">
       </div>
