--- a/quiz.html
+++ b/quiz.html
@@ -21,7 +21,7 @@
 
     <div class="progress-box">
       <div class="progress-text">
-        Teil <span id="step">1</span> von <span id="totalParts">4</span> •
+        Station <span id="step">1</span> von <span id="totalParts">4</span> •
         Punkte: <span id="points">0</span>
       </div>
       <div class="progress-bar">
