--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
 <header>
   <h1>Streuobst - Der bessere Apfel?</h1>
   <p class="links">
-    <a href="index.html">Film</a> •
+    <a href="index.html">Film</a>
     <a href="quiz.html">Quiz</a>
   </p>
 </header>
