--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         <iframe src="https://www.youtube.com/embed/aW6bqBBsRTc" width="560" height="315" frameborder="0" allowfullscreen></iframe>   
       </div>
     </section>
+    
+    <section class="card">
+      <h2>Beschreibung</h2>
+        <p>
+          Beim Einkaufen fällt Felix auf, dass bei manchen Apfelsäften "Streuobstäpfel" verwendet werden 
+          und stellt sich die Frage, worin sich diese mit herkömmlichen Äpfeln unterscheiden.
+          Dies führt ihn auf eine Reise bei welcher er viel über Äpfel, Naturschutz und den Apfelanbau lernt. 
+        </p>
+    </section>
   </main>
 
 </body>
